--- a/stylus/main.styl
+++ b/stylus/main.styl
@@ -1833,6 +1833,188 @@ body
 			background url('../images/argila_econom.png') center top
 
 			.-hint1
+				top -4px
+				height 85px
+				margin-left -420px
+
+				.hint_text
+					position absolute
+					bottom 0
+
+			.-hint2
+				top 406px
+				margin-left -524px
+
+			.-hint3
+				top 417px
+				margin-left -100px
+
+			.-hint4
+				top 387px
+				margin-left 540px
+
+		&.-argila_medium
+			background url('../images/argila_medium.png') no-repeat
+			position relative
+			top 100px
+			padding-bottom 100px
+
+			.-hint1
+				top -4px
+				height 85px
+				margin-left -420px
+
+				.hint_text
+					position absolute
+					bottom 0
+
+			.-hint2
+				top 355px
+				margin-left -524px
+
+			.-hint3
+				top 386px
+				margin-left 8px
+
+			.-hint4
+				top 340px
+				margin-left 542px
+
+			.-hint5
+				top 446px
+				margin-left 436px
+
+		&.-argila_premium
+			background url('../images/argila_premium.png') no-repeat
+			position relative
+			top 100px
+			padding-bottom 100px
+
+			.-hint1
+				top -10px
+				height 85px
+				margin-left -420px
+
+				.hint_text
+					position absolute
+					bottom 0
+
+			.-hint2
+				top 348px
+				margin-left -524px
+
+			.-hint3
+				top 378px
+				margin-left -96px
+
+				h2
+					width 252px
+
+			.-hint4
+				top 332px
+				margin-left 542px
+
+			.-hint5
+				top 440px
+				margin-left 436px
+
+				h2
+					width 252px
+
+		&.-argila_full
+			background url('../images/argila_full.png') no-repeat
+			position relative
+			top 200px
+			padding-bottom 200px
+
+			.-hint1
+				top -72px
+				height 85px
+				margin-left -524px
+
+				.hint_text
+					position absolute
+					bottom 0
+
+			.-hint2
+				top 364px
+				margin-left -524px
+
+			.-hint3
+				top 374px
+				margin-left -96px
+
+				h2
+					width 252px
+
+			.-hint4
+				top 328px
+				margin-left 544px
+
+			.-hint5
+				top 436px
+				margin-left 442px
+
+				h2
+					width 252px
+
+			.-hint6
+				top -2px
+				margin-left 436px
+
+		&.-nisip_econom
+			background url('../images/nisip_econom.png') no-repeat
+			position relative
+			top 200px
+			padding-bottom 200px
+
+			.-hint1
+				top -66px
+				height 85px
+				margin-left -524px
+
+				.hint_text
+					position absolute
+					bottom 0
+
+			.-hint2
+				top 394px
+				margin-left -312px
+
+			.-hint3
+				top 360px
+				margin-left 434px
+
+		&.-nisip_medium
+			background url('../images/nisip_medium.png') no-repeat
+			position relative
+			top 100px
+			padding-bottom 200px
+
+			.-hint1
+				top -6px
+				height 85px
+				margin-left -420px
+
+				.hint_text
+					position absolute
+					bottom 0
+
+			.-hint2
+				top 364px
+				margin-left -524px
+
+			.-hint3
+				top 440px
+				margin-left 546px
+
+		&.-nisip_premium
+			background url('../images/nisip_premium.png') no-repeat
+			position relative
+			top 0
+			padding-bottom 100px
+
+			.-hint1
 				top 0px
 				height 85px
 				margin-left -420px
@@ -1842,16 +2024,54 @@ body
 					bottom 0
 
 			.-hint2
-				top 402px
-				margin-left -520px
+				top 358px
+				margin-left -524px
 
 			.-hint3
-				top 415px
-				margin-left -100px
+				top 426px
+				margin-left 542px
 
 			.-hint4
-				top 370px
-				margin-left 420px
+				top 435px
+				margin-left 10px
+
+		&.-nisip_full
+			background url('../images/nisip_full.png') no-repeat
+			position relative
+			top 0
+			padding-bottom 200px
+
+			.-hint1
+				top -85px
+				height 85px
+				margin-left -524px
+
+				.hint_text
+					position absolute
+					bottom 0
+
+			.-hint2
+				top 380px
+				margin-left -524px
+
+			.-hint3
+				top 450px
+				margin-left 544px
+
+			.-hint4
+				top 464px
+				margin-left 10px
+
+			.-hint5
+				top 356px
+				margin-left -200px
+
+				h2
+					width 252px
+
+			.-hint6
+				top -10px
+				margin-left 440px
 
 .tooltip
 	position relative
